Made footer in background with z-index instead+fixed selector sometimes being invisible

--- a/css/main.css
+++ b/css/main.css
@@ -20,6 +20,7 @@ footer {
     margin-top: -3.5em;
     text-align: center;
     font-family: "Magra";
+    z-index: -1;
 }
 
 .github-corner:hover .octo-arm {
